# autotools-demo

./: Makefile.am  README.md  build_clean.sh  configure.ac
